<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="@dimen/sixteen_dp"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fifty_dp"
        android:gravity="center"
        android:text="@string/ENTER_DETAILS"
        android:textColor="@color/colorLightColor"
        android:textSize="@dimen/twenty_four_sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonViewAll"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fourty_dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorPrimary"
        android:paddingLeft="@dimen/sixteen_dp"
        android:paddingRight="@dimen/sixteen_dp"
        android:text="@string/VIEW_ALL"
        android:textColor="@color/colorLightColor"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:background="@drawable/item_background"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="@dimen/twelve_dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:background="@drawable/item_background"
        android:hint="@string/customer_id"
        android:padding="@dimen/twelve_dp"
        android:textSize="@dimen/sixteen_dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:background="@drawable/item_background"
        android:gravity="start|top"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:padding="@dimen/twelve_dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewId" />

    <EditText
        android:id="@+id/editTextContactNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:background="@drawable/item_background"
        android:hint="@string/contact_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="@dimen/twelve_dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="@dimen/hundred_dp"
        android:layout_height="@dimen/fourty_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:gravity="center"
        android:text="@string/type"
        android:textColor="@color/colorLightColor"
        android:textSize="@dimen/twenty_sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/editTextContactNumber" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_sp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:background="@drawable/item_background"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@+id/textViewType"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContactNumber">

        <RadioButton
            android:id="@+id/radioButtonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawableLeft="@drawable/ic_check"
            android:drawablePadding="@dimen/zero_dp"
            android:drawableTint="@color/colorLightColor"
            android:gravity="center"
            android:padding="@dimen/ten_dp"
            android:text="@string/group"
            android:textColor="@color/radio_text_selector" />

        <RadioButton
            android:id="@+id/radioButtonIndividual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:drawableLeft="@drawable/ic_check"
            android:drawablePadding="@dimen/zero_dp"
            android:drawableTint="@color/colorLightColor"
            android:gravity="center"
            android:padding="@dimen/ten_dp"
            android:text="@string/individual"
            android:textColor="@color/radio_text_selector" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background"
        android:backgroundTint="@color/colorPrimary"
        android:padding="@dimen/sixteen_dp"
        android:text="@string/save"
        android:textColor="@color/colorLightColor"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>